--- a/LpDExercise/mainwindow.ui
+++ b/LpDExercise/mainwindow.ui
@@ -95,6 +95,19 @@
       </rect>
      </property>
     </widget>
+    <widget class="QPushButton" name="m_ClearInputListButton">
+     <property name="geometry">
+      <rect>
+       <x>50</x>
+       <y>300</y>
+       <width>93</width>
+       <height>29</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Clear</string>
+     </property>
+    </widget>
    </widget>
    <zorder>m_ProcessGroupBox</zorder>
    <zorder>m_UserInGroupBox</zorder>
